--- a/testevr.html
+++ b/testevr.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inspeção com PoseNet e Métricas</title>
+  <title>Detecção de Objetos e Poses</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/posenet"></script>
   <style>
     body {
@@ -69,7 +70,7 @@
   </style>
 </head>
 <body>
-  <h1>Detecção de Poses e Métricas</h1>
+  <h1>Detecção de Objetos e Poses</h1>
   <video id="videoElement" autoplay playsinline muted></video>
   <canvas id="canvas"></canvas>
   <div id="metrics">
@@ -95,13 +96,15 @@
     const pauseCaptureBtn = document.getElementById('pauseCapture');
     const downloadReportBtn = document.getElementById('downloadReport');
 
-    let model;
+    let cocoModel, poseModel;
     let currentStream;
     let usingFrontCamera = true;
     let isPaused = false;
+    const objectMetrics = {};
     const detectionResults = [];
+    const CAMERA_FOV_CM = 40;
 
-    async function setupCamera(facingMode = "user") {
+    async function setupCamera(facingMode = "environment") {
       if (currentStream) {
         currentStream.getTracks().forEach(track => track.stop());
       }
@@ -112,9 +115,10 @@
       currentStream = stream;
     }
 
-    async function loadModel() {
-      model = await posenet.load();
-      logMessage("Modelo PoseNet carregado!");
+    async function loadModels() {
+      cocoModel = await cocoSsd.load();
+      poseModel = await posenet.load();
+      logMessage("Modelos COCO-SSD e PoseNet carregados!");
     }
 
     function logMessage(message) {
@@ -124,72 +128,78 @@
       logList.parentElement.scrollTop = logList.parentElement.scrollHeight;
     }
 
-    async function detectPose() {
-      if (isPaused) return;
+    function updateMetrics(predictions, type) {
+      predictions.forEach(prediction => {
+        const { class: className, bbox } = prediction;
+        const dimensions = bbox
+          ? convertToRealDimensions(bbox, videoElement.videoWidth, videoElement.videoHeight)
+          : null;
 
-      const pose = await model.estimateSinglePose(videoElement, {
-        flipHorizontal: false,
+        if (!objectMetrics[className]) objectMetrics[className] = { count: 0, dimensions: [] };
+        objectMetrics[className].count += 1;
+        if (dimensions) objectMetrics[className].dimensions.push(dimensions);
+
+        logMessage(`${type}: ${className} detectado. Dimensões: ${dimensions ? `${dimensions.realWidth.toFixed(2)}x${dimensions.realHeight.toFixed(2)} cm` : "N/A"}`);
       });
+
+      renderMetrics();
+    }
+
+    function renderMetrics() {
+      metricsList.innerHTML = '';
+      for (const [key, data] of Object.entries(objectMetrics)) {
+        const avgWidth = data.dimensions.length
+          ? (data.dimensions.reduce((sum, dim) => sum + dim.realWidth, 0) / data.dimensions.length).toFixed(2)
+          : "N/A";
+        const avgHeight = data.dimensions.length
+          ? (data.dimensions.reduce((sum, dim) => sum + dim.realHeight, 0) / data.dimensions.length).toFixed(2)
+          : "N/A";
+
+        const li = document.createElement('li');
+        li.textContent = `${key}: ${data.count} vezes | Tamanho Médio: ${avgWidth} x ${avgHeight} cm`;
+        metricsList.appendChild(li);
+      }
+    }
+
+    function convertToRealDimensions(bbox, videoWidth, videoHeight) {
+      const [x, y, width, height] = bbox;
+      const realWidth = (width / videoWidth) * CAMERA_FOV_CM;
+      const realHeight = (height / videoHeight) * (CAMERA_FOV_CM * (videoHeight / videoWidth));
+      return { realWidth, realHeight };
+    }
+
+    function renderHeatmap(predictions) {
+      predictions.forEach(prediction => {
+        const [x, y, width, height] = prediction.bbox || [];
+        const gradient = ctx.createRadialGradient(
+          x + width / 2,
+          y + height / 2,
+          0,
+          x + width / 2,
+          y + height / 2,
+          Math.max(width, height)
+        );
+        gradient.addColorStop(0, "rgba(255, 0, 0, 0.8)");
+        gradient.addColorStop(1, "rgba(255, 0, 0, 0)");
+        ctx.fillStyle = gradient;
+        ctx.fillRect(x, y, width, height);
+      });
+    }
+
+    async function detectLoop() {
+      if (isPaused) return;
 
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       ctx.drawImage(videoElement, 0, 0, canvas.width, canvas.height);
 
-      // Renderizar pose
-      renderPose(pose);
-      renderHeatmap(pose);
+      const cocoPredictions = await cocoModel.detect(videoElement);
+      const pose = await poseModel.estimateSinglePose(videoElement);
 
-      requestAnimationFrame(detectPose);
-    }
+      renderHeatmap(cocoPredictions);
+      updateMetrics(cocoPredictions, "Objeto");
+      updateMetrics([pose], "Pose");
 
-    function renderPose(pose) {
-      pose.keypoints.forEach(keypoint => {
-        if (keypoint.score > 0.5) {
-          ctx.beginPath();
-          ctx.arc(keypoint.position.x, keypoint.position.y, 5, 0, 2 * Math.PI);
-          ctx.fillStyle = "red";
-          ctx.fill();
-        }
-      });
-
-      // Conectar os pontos
-      drawSkeleton(pose.keypoints, ctx);
-    }
-
-    function drawSkeleton(keypoints, ctx) {
-      const adjacentKeyPoints = posenet.getAdjacentKeyPoints(keypoints, 0.5);
-      adjacentKeyPoints.forEach(([from, to]) => {
-        ctx.beginPath();
-        ctx.moveTo(from.position.x, from.position.y);
-        ctx.lineTo(to.position.x, to.position.y);
-        ctx.lineWidth = 2;
-        ctx.strokeStyle = "blue";
-        ctx.stroke();
-      });
-    }
-
-    function renderHeatmap(pose) {
-      pose.keypoints.forEach(keypoint => {
-        if (keypoint.score > 0.5) {
-          const gradient = ctx.createRadialGradient(
-            keypoint.position.x,
-            keypoint.position.y,
-            0,
-            keypoint.position.x,
-            keypoint.position.y,
-            20
-          );
-          gradient.addColorStop(0, "rgba(255, 0, 0, 0.8)");
-          gradient.addColorStop(1, "rgba(255, 0, 0, 0)");
-
-          ctx.fillStyle = gradient;
-          ctx.fillRect(
-            keypoint.position.x - 10,
-            keypoint.position.y - 10,
-            20,
-            20
-          );
-        }
-      });
+      requestAnimationFrame(detectLoop);
     }
 
     switchCameraBtn.addEventListener("click", async () => {
@@ -200,21 +210,21 @@
     pauseCaptureBtn.addEventListener("click", () => {
       isPaused = !isPaused;
       pauseCaptureBtn.textContent = isPaused ? "Retomar Captura" : "Pausar Captura";
-      if (!isPaused) detectPose();
+      if (!isPaused) detectLoop();
     });
 
     downloadReportBtn.addEventListener("click", () => {
-      const blob = new Blob([JSON.stringify(detectionResults, null, 2)], { type: "application/json" });
+      const blob = new Blob([JSON.stringify(objectMetrics, null, 2)], { type: "application/json" });
       const link = document.createElement("a");
       link.href = URL.createObjectURL(blob);
-      link.download = "pose_report.json";
+      link.download = "metrics_report.json";
       link.click();
     });
 
     async function init() {
       await setupCamera();
-      await loadModel();
-      detectPose();
+      await loadModels();
+      detectLoop();
     }
 
     init();
