--- a/testevr.html
+++ b/testevr.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Detecção de Objetos, Poses e Métricas</title>
+  <title>Detecção de Objetos, Poses e VR com Análise Ergonômica</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/posenet"></script>
@@ -66,7 +66,7 @@
   </style>
 </head>
 <body>
-  <h1>Detecção de Objetos, Poses e Métricas</h1>
+  <h1>Detecção de Objetos, Poses e Análise Ergonômica</h1>
   <video id="videoElement" autoplay playsinline muted></video>
   <canvas id="canvas"></canvas>
   <div id="metrics">
@@ -100,9 +100,8 @@
     let isPaused = false;
     const detectionResults = [];
     const objectMetrics = {};
-    const CAMERA_FOV_CM = 40; // Campo de visão estimado da câmera em cm
 
-    async function setupCamera(facingMode = "environment") {
+    async function setupCamera(facingMode = "user") {
       if (currentStream) {
         currentStream.getTracks().forEach((track) => track.stop());
       }
@@ -126,26 +125,12 @@
       logList.parentElement.scrollTop = logList.parentElement.scrollHeight;
     }
 
-    function updateMetrics(predictions) {
-      predictions.forEach((obj) => {
-        const className = obj.class;
-        const dimensions = obj.bbox
-          ? convertToRealDimensions(obj.bbox, videoElement.videoWidth, videoElement.videoHeight)
-          : null;
-
-        if (!objectMetrics[className]) {
-          objectMetrics[className] = { count: 0, dimensions: [] };
-        }
+    function updateMetrics(predictions, type) {
+      predictions.forEach((prediction) => {
+        const className = prediction.class || "Pose";
+        if (!objectMetrics[className]) objectMetrics[className] = { count: 0 };
         objectMetrics[className].count += 1;
-        if (dimensions) objectMetrics[className].dimensions.push(dimensions);
-
-        logMessage(
-          `Objeto: ${className} | Dimensões: ${
-            dimensions
-              ? `${dimensions.realWidth.toFixed(2)} cm x ${dimensions.realHeight.toFixed(2)} cm (Área: ${dimensions.areaM2.toFixed(2)} m²)`
-              : "N/A"
-          }`
-        );
+        logMessage(`${type}: ${className} detectado.`);
       });
 
       renderMetrics();
@@ -154,28 +139,57 @@
     function renderMetrics() {
       metricsList.innerHTML = "";
       for (const [key, data] of Object.entries(objectMetrics)) {
-        const avgWidth = data.dimensions.length
-          ? (data.dimensions.reduce((sum, dim) => sum + dim.realWidth, 0) / data.dimensions.length).toFixed(2)
-          : "N/A";
-        const avgHeight = data.dimensions.length
-          ? (data.dimensions.reduce((sum, dim) => sum + dim.realHeight, 0) / data.dimensions.length).toFixed(2)
-          : "N/A";
-        const avgArea = data.dimensions.length
-          ? (data.dimensions.reduce((sum, dim) => sum + dim.areaM2, 0) / data.dimensions.length).toFixed(2)
-          : "N/A";
-
         const li = document.createElement("li");
-        li.textContent = `${key}: ${data.count} vezes | Média: ${avgWidth} cm x ${avgHeight} cm (Área: ${avgArea} m²)`;
+        li.textContent = `${key}: ${data.count} vezes`;
         metricsList.appendChild(li);
       }
     }
 
-    function convertToRealDimensions(bbox, videoWidth, videoHeight) {
-      const [x, y, width, height] = bbox;
-      const realWidth = (width / videoWidth) * CAMERA_FOV_CM;
-      const realHeight = (height / videoHeight) * (CAMERA_FOV_CM * (videoHeight / videoWidth));
-      const areaM2 = (realWidth / 100) * (realHeight / 100); // Convertendo para m²
-      return { realWidth, realHeight, areaM2 };
+    function calculateAngle(a, b, c) {
+      const ab = Math.sqrt(Math.pow(b.x - a.x, 2) + Math.pow(b.y - a.y, 2));
+      const bc = Math.sqrt(Math.pow(b.x - c.x, 2) + Math.pow(b.y - c.y, 2));
+      const ac = Math.sqrt(Math.pow(c.x - a.x, 2) + Math.pow(c.y - a.y, 2));
+      return Math.acos((ab * ab + bc * bc - ac * ac) / (2 * ab * bc)) * (180 / Math.PI);
+    }
+
+    function checkErgonomicStandards(pose) {
+      const leftElbowAngle = calculateAngle(
+        pose.keypoints[5].position, // Ombro esquerdo
+        pose.keypoints[7].position, // Cotovelo esquerdo
+        pose.keypoints[9].position  // Pulso esquerdo
+      );
+
+      const rightElbowAngle = calculateAngle(
+        pose.keypoints[6].position, // Ombro direito
+        pose.keypoints[8].position, // Cotovelo direito
+        pose.keypoints[10].position // Pulso direito
+      );
+
+      const spineAngle = calculateAngle(
+        pose.keypoints[11].position, // Quadril esquerdo
+        pose.keypoints[5].position,  // Ombro esquerdo
+        pose.keypoints[6].position   // Ombro direito
+      );
+
+      const ergonomicStatus = {
+        leftElbow: leftElbowAngle >= 90 && leftElbowAngle <= 120,
+        rightElbow: rightElbowAngle >= 90 && rightElbowAngle <= 120,
+        spine: spineAngle >= 170 && spineAngle <= 190, // Coluna ereta
+      };
+
+      return ergonomicStatus;
+    }
+
+    function renderErgonomicFeedback(ergonomicStatus) {
+      if (!ergonomicStatus.leftElbow) {
+        logMessage("Atenção: Ângulo do cotovelo esquerdo fora do padrão ergonômico!");
+      }
+      if (!ergonomicStatus.rightElbow) {
+        logMessage("Atenção: Ângulo do cotovelo direito fora do padrão ergonômico!");
+      }
+      if (!ergonomicStatus.spine) {
+        logMessage("Atenção: Postura da coluna fora do padrão ergonômico!");
+      }
     }
 
     function renderObjects(objects) {
@@ -220,10 +234,14 @@
 
       const objects = await cocoModel.detect(videoElement);
       renderObjects(objects);
-      updateMetrics(objects);
+      updateMetrics(objects, "Objeto");
 
       const pose = await poseModel.estimateSinglePose(videoElement);
       renderPose(pose);
+      updateMetrics([pose], "Pose");
+
+      const ergonomicStatus = checkErgonomicStandards(pose);
+      renderErgonomicFeedback(ergonomicStatus);
 
       requestAnimationFrame(detectLoop);
     }
@@ -250,10 +268,15 @@
     });
 
     downloadReportBtn.addEventListener("click", () => {
-      const blob = new Blob([JSON.stringify(objectMetrics, null, 2)], { type: "application/json" });
+      const report = {
+        objectMetrics,
+        ergonomicStatus: checkErgonomicStandards(pose),
+        timestamp: new Date().toISOString(),
+      };
+      const blob = new Blob([JSON.stringify(report, null, 2)], { type: "application/json" });
       const link = document.createElement("a");
       link.href = URL.createObjectURL(blob);
-      link.download = "metrics_report.json";
+      link.download = "ergonomic_report.json";
       link.click();
     });
 
